--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <button onclick="subscribe()">구독</button>
+    <button onclick="subscribe()">구독_v1</button>
     
 
     <script>
