--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 userVisibleOnly: true,
                 applicationServerKey:'BFNsVYdw-SLnd3M64D83IPDpj6f7gOxD1iykrgbRs5sQe8B4Oaz7HFL0zR-8gqAfjAeGjizwMrxTmye4ghiz3Ss'
             });
+            console.log(JSON.stringify(push));
         }
     </script>
 </body>
