--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <title>FCM 푸시 테스트</title>
     <script type="module">
         // API 기본 URL 설정
+        const PORT = 5000;  // index.js의 포트와 동일하게 설정
         const API_BASE_URL = window.location.hostname === 'localhost' 
-            ? 'http://localhost:5000' 
+            ? `http://localhost:${PORT}` 
             : '/.netlify/functions';
 
         // Firebase SDK import
