--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff">
     <title>웹 애플리케이션</title>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script src="../index.js"></script>
+    <div id="root">
+        <div class="container">
+            <h1>사용자 목록</h1>
+            <div class="user-section">
+                <select id="userSelect" class="user-select">
+                    <option value="">사용자를 선택하세요</option>
+                </select>
+                <div id="userStatus" class="user-status">
+                    <p>상태: <span id="activeStatus">-</span></p>
+                    <p>마지막 접속: <span id="lastSeen">-</span></p>
+                </div>
+            </div>
+
+            <div class="push-section">
+                <h2>푸시 메시지 발송</h2>
+                <div class="push-form">
+                    <div class="form-group">
+                        <label for="pushTitle">제목</label>
+                        <input type="text" id="pushTitle" placeholder="푸시 메시지 제목을 입력하세요">
+                    </div>
+                    <div class="form-group">
+                        <label for="pushBody">내용</label>
+                        <textarea id="pushBody" placeholder="푸시 메시지 내용을 입력하세요"></textarea>
+                    </div>
+                    <button id="sendPush" class="push-button">발송</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html> 
